Update contact email in privacy policy

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -28,7 +28,7 @@
 
 <h3>Contacto</h3>
 <p>Si tienes dudas o inquietudes sobre esta política, puedes escribir a:  
-<strong>tu_correo@gmail.com</strong></p>
+<strong>josejurg16@gmail.com</strong></p>
 
 </body>
 </html>
